# forex

./: .gitignore  AGENTS.md  LICENSE  README.md  catalog.json  dbt_project.yml  downloader.py  forex.db  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  profiles.yml  pyproject.toml  run_results.json
.github/workflows/: api-deploy.yml  daily-pipeline.yml  dbt-docs.yml  terraform.yml
api/: Dockerfile  openapi.yaml  pyproject.toml  testing.http
api/scripts/: generate_openapi.py
api/src/: main.py
api/tests/: test_main.py
compiled/forex/models/presentation/: rates.sql  twi.sql  weights.sql
compiled/forex/models/presentation/schema.yml/: dbt_utils_source_unique_combin_a1331b9cb027146893d4dd7ca77e5767.sql  source_no_future_dates_staging_rates_date.sql  source_not_null_staging_rates_base_iso.sql  (+5 more)
compiled/forex/seeds/schema.yml/: accepted_values_seed_weights_base_iso__EUR.sql  accepted_values_seed_weights_c51ddacc486fd65d3bf964424cdad42a.sql  dbt_utils_accepted_range_seed_weights_weight__1__0.sql  dbt_utils_unique_combination_o_0040858dc4fde9682037391513304bd0.sql  not_null_seed_weights_base_iso.sql  not_null_seed_weights_to_iso.sql  not_null_seed_weights_weight.sql  weights_sum_seed_weights_base_iso__1_0__1e_06__weight.sql
dbt/: profiles.yml  pyproject.toml
dbt/macros/: test_no_future_dates.sql
dbt/models/presentation/: rates.sql  schema.yml
dbt/scripts/: downloader.py
dbt/seeds/: seed_weights.csv
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
macros/: ensure_raw_rates_external.sql  test_weights_sum.sql
models/presentation/: rates.sql  schema.yml  twi.sql  weights.sql
models/staging/: staging_rates.sql
scripts/: dbt_test_to_junit.py  downloader.py
seeds/: schema.yml
